--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,70 +1,76 @@
 <div class="flex align-items-center min-h-screen justify-content-center">
-    <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-4 xl:w-3">
-        <div class="text-center mb-5">
+  <div class="surface-card p-4 shadow-2 border-round sm:w-10 md:w-8 lg:w-4 xl:w-3">
+    <div class="text-center mb-5">
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
-                <img src="assets/images/logo.png" alt="logo" height="80" width="80"     />
+                <img src="assets/images/logo.png" alt="logo" height="80" width="80"/>
                 <span class="font-medium text-xl font-semibold">VAHAN<span class="text-primary"> SATHI</span></span>
             </span>
-            <!-- <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-            <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a> -->
+      <!-- <span class="text-600 font-medium line-height-3">Don't have an account?</span>
+      <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a> -->
+    </div>
+
+    <div>
+      <label for="email" class="block text-900 font-medium mb-2">Username</label>
+      <p-iconField iconPosition="left">
+        <p-inputIcon styleClass="pi pi-user"/>
+        <input required id="email" class="w-full mb-3" type="text" placeholder="Username" [(ngModel)]="email"
+               pInputText (keydown.enter)="validateForm()"/>
+      </p-iconField>
+      @if (emailError) {
+        <div class="text-red-500 mb-3">{{ emailError }}</div>
+      }
+
+      <label for="password" class="block text-900 font-medium mb-2">Password</label>
+      <p-iconField iconPosition="right">
+        <p-inputIcon (click)="togglePassword()" styleClass="pi pi-eye cursor-pointer"/>
+        <input required [type]="isPasswordToggled ? 'text' : 'password'" placeholder="Password" [(ngModel)]="password"
+               pInputText
+               class="w-full mb-3" (copy)="disableEvent($event)" (paste)="disableEvent($event)"
+               (cut)="disableEvent($event)" (keydown.enter)="validateForm()">
+      </p-iconField>
+
+      @if (passwordError) {
+        <div class="text-red-500 mb-3">{{ passwordError }}</div>
+      }
+
+      <div class="flex align-items-center justify-content-between mb-3">
+        <div class="flex align-items-center">
+          <!-- <label for="rememberme1" class="text-900">Remember me</label> -->
         </div>
-
-        <div>
-            <label for="email" class="block text-900 font-medium mb-2">Username</label>
-            <p-iconField iconPosition="left">
-                <p-inputIcon styleClass="pi pi-user" />
-                <input required id="email" class="w-full mb-3" type="text" placeholder="Username" [(ngModel)]="email"
-                    pInputText (keydown.enter)="validateForm()" />
-            </p-iconField>
-            @if(emailError) {
-            <div class="text-red-500 mb-3">{{emailError}}</div>
-            }
-
-            <label for="password" class="block text-900 font-medium mb-2">Password</label>
-            <p-iconField iconPosition="right">
-                <p-inputIcon (click)="togglePassword()" styleClass="pi pi-eye cursor-pointer" />
-                <input required [type]="isPasswordToggled ? 'text' : 'password'" placeholder="Password" [(ngModel)]="password" pInputText
-                    class="w-full mb-3" (copy)="disableEvent($event)" (paste)="disableEvent($event)"
-                    (cut)="disableEvent($event)" (keydown.enter)="validateForm()">
-            </p-iconField>
-
-            @if(passwordError) {
-            <div class="text-red-500 mb-3">{{passwordError}}</div>
-            }
-
-            <div class="flex align-items-center justify-content-between mb-3">
-                <div class="flex align-items-center">
-                    <!-- <label for="rememberme1" class="text-900">Remember me</label> -->
-                </div>
-                <span [routerLink]="['/auth/forgot-password']" class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">
+        <span [routerLink]="['/auth/forgot-password']"
+              class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">
                     Forgot password?
                 </span>
-            </div>
+      </div>
 
-            <p-divider align="center" type="dotted">
-                <b>Enter CAPTCHA</b>
-            </p-divider>
-            <label for="reCAPTCHA" class="block text-900 font-medium mb-2"></label>
-           <div class="grid">
-                <div class="col-6">
-                    <div
-                        class="flex justify-content-between align-items-center p-3 bg-yellow-100 border-round text-yellow-800">
-                        <span class="captcha-text">{{ captchaCode }}</span>
-                        <i (click)="generateCatcha()" class="pi pi-refresh cursor-pointer ml-2"></i>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <p-iconField iconPosition="right">
-                        <p-inputIcon [styleClass]="captchaImageClass" />
-                        <input  id="reCAPTCHA" type="text" placeholder="Enter here" (keyup)="onCaptchaInputChange($event)" [(ngModel)]="userInput" pInputText
-                            class="w-full mb-3" [ngClass]="{'ng-invalid ng-dirty p-shake': captchaError}" />
-                    </p-iconField>
-                </div>
-            </div>
+      <div *ngIf="!isCaptchaDisabled">
 
-            <button [disabled]="!userInput.length" [loading]="isLoggedIn" pButton pRipple label="Sign In"
-                icon="pi pi-sign-in" iconPos="right" class="w-full" autofocus (click)="validateForm()"></button>
+        <p-divider align="center" type="dotted">
+          <b>Enter CAPTCHA</b>
+        </p-divider>
+        <label for="reCAPTCHA" class="block text-900 font-medium mb-2"></label>
+        <div class="grid">
+          <div class="col-6">
+            <div
+              class="flex justify-content-between align-items-center p-3 bg-yellow-100 border-round text-yellow-800">
+              <span class="captcha-text">{{ captchaCode }}</span>
+              <i (click)="generateCatcha()" class="pi pi-refresh cursor-pointer ml-2"></i>
+            </div>
+          </div>
+          <div class="col-6">
+            <p-iconField iconPosition="right">
+              <p-inputIcon [styleClass]="captchaImageClass"/>
+              <input id="reCAPTCHA" type="text" placeholder="Enter here" (keyup)="onCaptchaInputChange($event)"
+                     [(ngModel)]="userInput" pInputText
+                     class="w-full mb-3" [ngClass]="{'ng-invalid ng-dirty p-shake': captchaError}"/>
+            </p-iconField>
+          </div>
         </div>
+      </div>
+
+      <button [disabled]="!userInput.length" [loading]="isLoggedIn" pButton pRipple label="Sign In"
+              icon="pi pi-sign-in" iconPos="right" class="w-full" autofocus (click)="validateForm()"></button>
     </div>
+  </div>
 </div>
 
