--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -58,20 +58,41 @@
                         <div class="flex flex-column gap-2 mx-auto" style="min-height: 8rem; max-width: 20rem">
                             <div class="text-center mt-3 mb-3 text-xl font-semibold">Password</div>
                             <div class="field p-fluid">
-                                <p-iconField iconPosition="right">
-                                    <input id="Password" placeholder="Enter Password" class="w-full mt-2" required [(ngModel)]="resetPasswordObj.newPassword"
-                                        [type]="isPasswordToggled ? 'text' : 'password'" pInputText (copy)="disableEvent($event)"
-                                        (paste)="disableEvent($event)" (cut)="disableEvent($event)">
-                                    <p-inputIcon (click)="togglePassword()"
-                                        [styleClass]="isPasswordToggled ? 'pi pi-eye-slash cursor-pointer' : 'pi pi-eye cursor-pointer'" />
-                                </p-iconField>
-                                <p-iconField iconPosition="right">
+                                <p-password [(ngModel)]="resetPasswordObj.newPassword" 
+                                    placeholder="Enter Password"
+                                    [required]="true"
+                                    [feedback]="true"
+                                    [toggleMask]="true"
+                                    styleClass="w-full"
+                                    inputStyleClass="w-full"
+                                    appendTo="body">
+                                    <ng-template pTemplate="header">
+                                        <h6>Pick a password</h6>
+                                    </ng-template>
+                                    <ng-template pTemplate="footer">
+                                        <p-divider />
+                                        <p class="mt-2">Suggestions</p>
+                                        <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
+                                            <li>At least one uppercase</li>
+                                            <li>At least one numeric</li>
+                                            <li>At least one special character</li>
+                                            <li>Minimum 8 characters</li>
+                                        </ul>
+                                    </ng-template>
+                                </p-password>
+                                @if(resetPasswordObj.newPassword() && resetPasswordObj.newPassword().length > 0 && !isPasswordStrong(resetPasswordObj.newPassword())) {
+                                    <small class="text-red-500 mt-1 block">Password does not meet strength requirements</small>
+                                }
+                                <p-iconField iconPosition="right" class="mt-2">
                                     <input id="retype-Password" placeholder="Re-type Password" class="w-full mt-2" required [(ngModel)]="resetPasswordObj.reTypedPassword"
                                         [type]="isRetypePasswordToggled ? 'text' : 'password'" pInputText (copy)="disableEvent($event)"
                                         (paste)="disableEvent($event)" (cut)="disableEvent($event)">
                                     <p-inputIcon (click)="toggleRetypePassword()"
                                         [styleClass]="isRetypePasswordToggled ? 'pi pi-eye-slash cursor-pointer' : 'pi pi-eye cursor-pointer'" />
                                 </p-iconField>
+                                @if(resetPasswordObj.reTypedPassword() && resetPasswordObj.newPassword() !== resetPasswordObj.reTypedPassword()) {
+                                    <small class="text-red-500 mt-1 block">Passwords do not match</small>
+                                }
                             </div>
                         </div>
                         <div class="flex pt-4 justify-content-end">
